// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default-sort-column Renders \`default-sort-column\` with custom props 1`] = `
<div
  class="v-list-group"
>
  <div
    aria-expanded="false"
    class="v-list-group__header v-list-item v-list-item--link theme--light"
    role="button"
    tabindex="0"
  >
    <div
      class="v-list-item__content widget-settings-item-title"
    >
      <div
        class="v-list-item__title validation-header"
      >
          Default sort column
        <!---->
      </div>
    </div>
    <div
      class="v-list-item__icon v-list-group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    name="expand-transition"
  >
    <div
      class="v-list-group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout"
        >
          <div
            class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
          >
            <div
              class="v-input__control"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="v-input__slot"
                role="button"
              >
                <div
                  class="v-select__slot"
                >
                  <label
                    class="v-label v-label--active theme--light"
                    style="left: 0px; position: absolute;"
                  >
                    Columns label
                  </label>
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      Created at
                    </div>
                    <input
                      aria-readonly="false"
                      autocomplete="off"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                  <input
                    type="hidden"
                    value="createdAt"
                  />
                </div>
                <div
                  class="v-menu"
                >
                  <!---->
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="layout"
        >
          <div
            class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
          >
            <div
              class="v-input__control"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="v-input__slot"
                role="button"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      DESC
                    </div>
                    <input
                      aria-readonly="false"
                      autocomplete="off"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                  <input
                    type="hidden"
                    value="DESC"
                  />
                </div>
                <div
                  class="v-menu"
                >
                  <!---->
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`default-sort-column Renders \`default-sort-column\` with default props 1`] = `
<div
  class="v-list-group"
>
  <div
    aria-expanded="false"
    class="v-list-group__header v-list-item v-list-item--link theme--light"
    role="button"
    tabindex="0"
  >
    <div
      class="v-list-item__content widget-settings-item-title"
    >
      <div
        class="v-list-item__title validation-header"
      >
          Default sort column
        <!---->
      </div>
    </div>
    <div
      class="v-list-item__icon v-list-group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    name="expand-transition"
  >
    <div
      class="v-list-group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout"
        >
          <div
            class="v-input theme--light v-text-field v-select"
          >
            <div
              class="v-input__control"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="v-input__slot"
                role="button"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <input
                      aria-readonly="false"
                      autocomplete="off"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                  <input
                    type="hidden"
                  />
                </div>
                <div
                  class="v-menu"
                >
                  <!---->
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="layout"
        >
          <div
            class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
          >
            <div
              class="v-input__control"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                class="v-input__slot"
                role="button"
              >
                <div
                  class="v-select__slot"
                >
                  <div
                    class="v-select__selections"
                  >
                    <div
                      class="v-select__selection v-select__selection--comma"
                    >
                      ASC
                    </div>
                    <input
                      aria-readonly="false"
                      autocomplete="off"
                      readonly="readonly"
                      type="text"
                    />
                  </div>
                  <div
                    class="v-input__append-inner"
                  >
                    <div
                      class="v-input__icon v-input__icon--append"
                    >
                      <i
                        aria-hidden="true"
                        class="v-icon notranslate material-icons theme--light"
                      >
                        arrow_drop_down
                      </i>
                    </div>
                  </div>
                  <input
                    type="hidden"
                    value="ASC"
                  />
                </div>
                <div
                  class="v-menu"
                >
                  <!---->
                </div>
              </div>
              <div
                class="v-text-field__details"
              >
                <div
                  class="v-messages theme--light"
                >
                  <transition-group-stub
                    class="v-messages__wrapper"
                    name="message-transition"
                    tag="div"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
